# hbf

./: .ghci  .gitignore  .gitlab-ci.yml  .travis.yml  Build.hs  ChangeLog.md  Hbf.hs  Hbfc.hs  Makefile  README.md  bench.html  build  default.nix  hbf.cabal  hindent.nix  package.yml  release.nix
bench/: BenchEval.hs  Main.hs
coverage/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
coverage/hbf-0.1.0.1-inplace/: HBF.Compiler.hs.html
coverage/hbf-0.1.0.2-inplace/: HBF.Eval.hs.html  HBF.Parser.hs.html  HBF.Types.hs.html
coverage/hbf-0.2.0.0-inplace/: HBF.Compiler.hs.html  HBF.Types.hs.html
exe/: Hbf.hs  Hbfc.hs
src/HBF/: Compiler.hs  Eval.hs  Parser.hs  Types.hs
src/exe/hbf/: Main.hs
src/exe/hbfc/: Main.hs
tests/: CompilerTest.hs  EvalTest.hs  Helper.hs  IntegrationTests.hs  ParserTest.hs  allfeatures.bf  doctest.hs  test.hs
