name:                hbf
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
license:             GPL-3
license-file:        LICENSE
author:              Sebastian Galkin
maintainer:          paraseba@gmail.com
copyright:           Sebastian Galkin, 2018

synopsis:            An optimizing Brainfuck compiler and evaluator
description:
                     hbf is a compiler and executor of Brainfuck programs. It provides
                     two executables: @hbfc@ the Brainfuck compiler, and @hbf@ the virtual
                     machine that executes compiled Brainfuck programs.
homepage:            https://gitlab.com/paraseba/hbf
bug-reports:         https://gitlab.com/paraseba/hbf/issues

category:            Language

extra-source-files:  README.md
                     , tests/allfeatures.bf
                     , tests/factor.bf
                     , tests/squares.bf

source-repository head
     type: git
     location: git@gitlab.com:paraseba/hbf.git

flag dump
  -- dump files will be available after cabal build in dist/build/src/HBF/
  description: Dump stg and core files
  manual: True
  default: False

flag profile
  description: Enable profiling in benchmarks
  manual: True
  default: False

library
  exposed-modules: HBF.Types
                 , HBF.Parser
                 , HBF.Eval
                 , HBF.Compiler


  build-depends:       base >=4.10 && <4.11
                     , vector
                     , primitive
                     , text
                     , bytestring
                     , transformers
                     , filepath
                     , parsec
                     , binary
                     , optparse-applicative
                     , deepseq

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options: -O2
               -Wall
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction


  if flag(dump)
    ghc-options:
                -ddump-simpl
                -ddump-stg
                -ddump-to-file
                -dsuppress-idinfo
                -dsuppress-coercions
                -dsuppress-type-applications
                -dsuppress-uniques

  if flag(profile)
    ghc-options: -fprof-auto

executable hbfc
  main-is:             Hbfc.hs
  build-depends:       base >=4.10 && <4.11
                     , hbf

  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options: -O2
               -Wall
               -main-is Hbfc
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction

executable hbf
  main-is:             Hbf.hs
  build-depends:       base >=4.10 && <4.11
                     , hbf
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options: -O2
               -Wall
               -main-is Hbf
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction

  if flag(profile)
    ghc-options: -fprof-auto
                 "-with-rtsopts=-p -s -h -i0.05"

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:       base >=4.10 && <4.11
                     , hbf
                     , text
                     , temporary
                     , transformers
                     , vector
                     , HUnit
                     , hedgehog
                     , hedgehog-checkers
                     , smallcheck
                     , tasty
                     , tasty-hedgehog
                     , tasty-smallcheck
                     , tasty-hunit
                     , tasty-discover
                     , doctest

  ghc-options: -O2
               -Wall
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction
               -threaded
               "-with-rtsopts=-N"

  other-modules: ParserTest
               , CompilerTest
               , EvalTest
               , IntegrationTests
               , Helper

benchmark evalbench
  main-is:             BenchEval.hs
  type:
    exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.10 && <4.11
                     , hbf
                     , criterion
                     , text
                     , filepath
                     , transformers

  hs-source-dirs:      bench
  ghc-options: -O2
               -Wall
               -main-is BenchEval
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction
