name:                hbf
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
license:             GPL-3
license-file:        LICENSE
author:              Sebastian Galkin
maintainer:          paraseba@gmail.com
copyright:           Sebastian Galkin, 2018

synopsis:            An optimizing Brainfuck compiler and evaluator
description:
                     hbf is a compiler and executor of Brainfuck programs. It provides
                     two executables: @hbfc@ the Brainfuck compiler, and @hbf@ the virtual
                     machine that executes compiled Brainfuck programs.
homepage:            https://gitlab.com/paraseba/hbf
bug-reports:         https://gitlab.com/paraseba/hbf/issues

category:            Language

extra-source-files:  README.md
                     , ChangeLog.md
                     , tests/allfeatures.bf
                     , tests/factor.bf
                     , tests/squares.bf

source-repository head
     type: git
     location: git@gitlab.com:paraseba/hbf.git

flag dump
  -- dump files will be available after cabal build in dist/build/src/HBF/
  description: Dump stg and core files
  manual: True
  default: False

flag profile
  description: Enable profiling in benchmarks
  manual: True
  default: False

library
  exposed-modules: HBF.Types
                 , HBF.Parser
                 , HBF.Eval
                 , HBF.Compiler


  build-depends:     base == 4.10.0.0
               -- base >=4.10 && <4.11
                     , vector == 0.12.0.1
                     , primitive == 0.6.2.0
                     , text == 1.2.2.0
                     , bytestring == 0.10.8.0
                     , transformers >= 0.5.0.0
                     , filepath == 1.4.1.2
                     -- parsec ^
                     , parsec >= 3.1.10
                     , binary >= 0.7.2.2
                     , optparse-applicative == 0.14.0.0
                     , deepseq == 1.4.3.0

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options: -O
               -Wall
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction


  if flag(dump)
    ghc-options:
                -ddump-simpl
                -ddump-stg
                -ddump-to-file
                -dsuppress-idinfo
                -dsuppress-coercions
                -dsuppress-type-applications
                -dsuppress-uniques

  if flag(profile)
    ghc-options: -fprof-auto

executable hbfc
  main-is:             Hbfc.hs
  build-depends:       base
-- base >=4.10 && <4.11
                     , hbf

  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options: -O
               -Wall
               -main-is Hbfc
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction

executable hbf
  main-is:             Hbf.hs
  build-depends:       base
--base >=4.10 && <4.11
                     , hbf
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options: -O
               -Wall
               -main-is Hbf
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction

  if flag(profile)
    ghc-options: -fprof-auto
                 "-with-rtsopts=-p -s -h -i0.05"

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
                     base >=4.10 && <4.11
                     , hbf
                     , text
                     , temporary == 1.2.0.3
                     , transformers
                     , vector
                     , HUnit == 1.3.1.0
                     , hedgehog == 0.5
                     , hedgehog-checkers == 0.1.0.0
                     , smallcheck == 1.1
                     , tasty == 0.11.2.1
                     , tasty-hedgehog == 0.2.0.0
                     , tasty-smallcheck == 0.8
                     , tasty-hunit == 0.9.2
                     , tasty-discover == 2.0.0
                     --, doctest

  ghc-options: -O
               -Wall
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction
               -threaded
               "-with-rtsopts=-N"

  other-modules: ParserTest
               , CompilerTest
               , EvalTest
               , IntegrationTests
               , Helper

benchmark evalbench
  main-is:             BenchEval.hs
  type:
    exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:     base >=4.10 && <4.11
--base >=4.10 && <4.11
                     , hbf
                     , criterion == 1.1.4.0
                     , text
                     , filepath
                     , transformers

  hs-source-dirs:      bench
  ghc-options: -O
               -Wall
               -main-is BenchEval
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction
